--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,109 +1,494 @@
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+<div class="header">
+			<div class="container-fluid main-nav-shadow">
+				<div class="row">
+					<div class="col-md-2">
+						<br /><br />
+						<%= link_to root_path do %>
+    						<%= image_tag "app/logo1.png", class: "img-responsive" %>
+						<% end %>
+    				</div>
+    				<div class="col-md-8 the-bar-width">
+						<%= form_tag({ controller: :mains, action: :search }, :method => "get", id: "search-form") do %>
+						<div class="row" align="center">
+							<div class="col-md-2 col-sm-2 col-xs-12"></div>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+								<%= text_field_tag :q, params[:q], placeholder: "Search" %>
+							</div>
+							<div class="col-md-2 col-sm-2 col-xs-12" align="center">
+								<%= submit_tag "Search", class: "save-button" %>
+							</div>
+							<div class="col-md-2 col-sm-2 col-xs-12"></div>
+						</div>
+						<% end %>
+					</div>	
+					<div class="col-md-2">
+						<br /><br />
+    					<ul class="card">
+							<li><a href=""><i class="fa fa-user" aria-hidden="true"></i>Sign out</a></li>
+							<!-- Sign out link is here -->
+						</ul>
+					</div>
+    			</div>
+    		<br />
+			</div>
+		</div>
+
+
 <div class="banner-profile">
 <% if @profile.banner.url.nil? %>
-	<%= image_tag "app/kwaku1.jpg", class: "custom-profile-banner" %>
+	<%= image_tag "app/banner.jpg", class: "custom-profile-banner" %>
 <% else %>
 	<%= image_tag @profile.banner.url, class: "custom-profile-banner" %>
 <% end %>
+
 	<ul class="rslides" id="slider" value="<%= @profile.id %>" >
 		<li>
 			<div class="banner-profile-info">
-				<h3 class="full_name_text"><%= @profile.name_of_agency %></h3>
-				<span class="line1"></span>
-				<p class="tagline_text"><%= @profile.tagline %></p>
-				<span class="line2"></span>
-				<div class="social-icons">
-					<a href="#"><span class="facebook"></span></a>
-					<a href="#"><span class="twitter"></span></a>
-					<a href="#"><span class="linkedin"></span></a>
-					<a href="#"><span class="googleplus"></span></a>
-				</div>
+				<h3>Name of business</h3>
+				<p>Tagline</p>
+				<br /><br /><br />
 			</div>
 		</li>
 	</ul>
 </div>
-<div class="about-me">
-	<br />
-</div>
-<div class="about-me" id="about">
+<div class="about-me" id="about" style="background-color: #f2f2f2;">
 	<div class="container">
+	<br /><br />
 		<div class="row">
-			<div class="col-md-4 col-xs-12">
-				<div class="mydetails slideanim text-center">
-					<div>
-						<%= image_tag "app/man.jpg", { class: "img-circle img-responsive", alt: "Generic placeholder image", width: "200", height: "200" } %>
-						<h3>Who we are</h3>
-						<p class="short_desc_text"><%= @profile.short_desc %></p>
+			<div class="col-md-3">
+				<div class="mydetails slideanim text-center" style="padding: 0px;">
+					<div style="background-color: #aa9a80; width: 100%; height: 100%; color: white;">
+						<br /><br />
+						<%= image_tag "app/man.jpg", { class: "img-circle img-responsive img-border", alt: "Generic placeholder image", width: "200", height: "200" } %>
+						<br /><br />
+						<div class="row">
+							<div class="col-md-4">
+								<h4><b>125</b></h4><!-- Call from database -->
+								<p>Reviews</p>
+							</div>
+							<div class="col-md-4" style="border-left: 1px solid white; border-right: 1px solid white;">
+								<h4><b>85</b></h4><!-- Call from database -->
+								<p>Messages</p>
+							</div>
+							<div class="col-md-4">
+								<h4><b>210</b></h4><!-- Call from database -->
+								<p>Listings</p>
+							</div>
+						</div>
+						<br /><br />
+						<div>
+							<button class="save-button">Edit Profile</button>
+						</div>
+						<br /><br />
 					</div>
-					<br />
-					<div class="contact-info some-border">
-						<h3>Where you can find us</h3>
-						<i aria-hidden="true"></i>
-                        <div class="footer-info">
-							<div class="some-border">
-								<i class="fa fa-globe" aria-hidden="true"></i>
-								<p class="p1 address_text">77727 Moi Avenue </p>
-								<p class="p2 address_text_2">Nairobi, Kenya</p>
-							</div>
-							<div class="some-border">
-								<i class="fa fa-phone" aria-hidden="true"></i>
-								<p class="p1 phone_number_text">+1 515 151515</p>
-								<p class="p2 phone_number_text_2">+00 1010101010</p>
-							</div>
-							<div class="some-border">
-								<i class="fa fa-envelope" aria-hidden="true"></i>
-								<p class="p1 email_text"><%= @profile.user.email %></p>
-								<p class="p2 email_text_2">myemail2@example.com</p>
+					<div>
+						<h3>WHO WE ARE</h3>
+						<div style="padding: 0em 2em 0em 2em;">
+							<p class="short_desc_text">Short description about your company</p>
+						</div>
+						<br />
+						<div>
+							<h3>WHAT WE DO</h3>
+                        	<div class="footer-info">
+								<div style="padding: 0em 2em 0em 2em;">
+									<p>What type of products or services do you provide to customers </p>
+								</div>
+								<br />
+								<div style="padding: 0em 2em 0em 2em;">
+									<h3>WHY WE DO IT</h3>
+									<p>What makes you special</p>
+								</div>
+								<br /><br />
 							</div>
 						</div>
 					</div>
-
-
-
 				</div>
 			</div>
-			<div class="col-md-8 col-xs-12">
-				<div class="myskills slideanim">
-					<h3 class="text-center">Why hire us</h3>
-                    
-					<p class="skill-text long_desc_text"><%= @profile.desc %></p>
-					
-				</div>
-				<br />
+			<% if flash[:notice].nil? %>
+				<%= display_errors_for_object @service %>
+			<% else %>
+				<%= display_service_posted_success flash[:notice] %>
+			<% end %>
+			<div class="col-md-9" style="background-color: #fff;">
 
-				
-				<div class="myskills slideanim move-down">
-					<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-						<ol class="carousel-indicators">
-							<% 0.upto(@services.size - 1) do |n| %>
-								<li data-target="#carousel-example-generic" data-slide-to="<%= n %>" class="active"></li>
-							<% end %>
-						</ol>
-						<div class="carousel-inner" role="listbox">
-							<% if @services.blank? %>
-
-								<h3 class="text-center">You are yet to post a service</h3>
-								<hr style="margin:0;">
-								<p class="text-center">When you post a service, you’ll see them here.</p>
-
-								<% else %>
-
-								<% @services.each do |service| %>
-									
-									<div class="col-md-4">
-										<%= image_tag service.picture.small.url %>
-									</div>
-
-								<% end %>		
-							<% end %>
+				<div class="navigation-div">
+					<ul class="nav nav-tabs">
+						<li class="active"><a data-toggle="tab" href="#home">New Listing</a></li>
+						<li><a data-toggle="tab" href="#menu3">My Listings</a></li>
+    					<li><a data-toggle="tab" href="#menu1">Inbox</a></li>
+  					</ul>
+  				</div>
+  				<br /><br />
+  				<div class="tab-content" align="center">
+  					<div id="home" class="tab-pane fade in active from-prof">
+      					<div class="myskills slideanim">
+							<h3 class="text-center">Post a Listing</h3>
+							<%= form_for @service, url: { controller: :services, action: :create, profile: @profile.id } do |f| %>
+                    		<table class="table table-striped">
+                    			<tr>
+                    				<td><p>Your service type</p></td>
+                    				<td style="vertical-align: middle;">
+										<%= f.select :category_id, @categories.map {|c| [c.name, c.id]}, class: "form-control" %>
+									</td>
+								</tr>
+								<tr>
+                    				<td><p>Your service sub-category</p></td>
+                    				<td style="vertical-align: middle;">
+										<!-- sub-categories should be here and from database -->
+									</td>
+								</tr>
+								<tr>
+                    				<td><p>Name of product</p></td>
+                    				<td style="vertical-align: middle;">
+										<!-- name of product should be a form input textbox -->
+									</td>
+								</tr>
+								<tr>
+									<td><p>Please upload a picture of your product</p></td>
+									<td style="vertical-align: middle;">
+										<%= f.file_field :picture, class: "form-control" %>
+									</td>
+								</tr>
+								<tr>
+									<td><p>Description of the product or service</p></td>
+									<td style="vertical-align: middle;">
+										<%= f.text_area :desc_service, rows:"10", cols:"31", placeholder: "Service Description", class:"form-control" %>
+									</td>
+								</tr>
+								<tr>
+									<td><p>Minimal Price</p></td>
+									<td style="vertical-align: middle;">
+										<%= f.text_field :price, placeholder: "Price", class: "form-control" %>	
+									</td>
+								</tr>
+								<tr>
+									<td colspan="2" align="center">	
+										<%= f.submit "Submit", class: "btn btn-success save-button" %>
+									</td>
+								</tr>
+								<% end %>
+							</table>
 						</div>
-					</div>
-				</div>
+    				</div>
+    				<div id="menu3" class="tab-pane fade">
+						<div class="myskills slideanim move-down">
+							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+								<ol class="carousel-indicators">
+									<% 0.upto(@my_services.size - 1) do |n| %>
+									<li data-target="#carousel-example-generic" data-slide-to="<%= n %>" class="active"></li>
+									<% end %>
+								</ol>
+								<div class="carousel-inner" role="listbox">
+									<% if @my_services.blank? %>
+
+									<h3 class="text-center">You are yet to post a listing</h3>
+									<hr style="margin:0;">
+									<p class="text-center">When you post listings, they will appear here.</p>
+
+									<% else %>
+
+									<% @my_services.each do |service| %>
+										<div class="col-md-4">
+											<%= image_tag service.picture.small.url %>
+										</div>
+
+									<% end %>		
+									<% end %>
+								</div>
+							</div>
+						</div>
+
+
+    				</div>
+    				<div id="menu1" class="tab-pane fade"><!-- Please put "no mesages yet" if there are no messages so that it won't be blank just like that -->
+      					<div class="myskills slideanim">
+							<div class="row">
+  								<div class="panel-group" id="accordion">
+								  <% @mail_box.each do |message| %>
+    								<div class="panel panel-default">
+      									<div class="panel-heading">
+        									<h4 class="panel-title">
+          										<a class="message-mail" title="<%= message.id %>" data-toggle="collapse" data-parent="#accordion" href="#collapse<%= message.id %>"><%= message.sender.name %></a>
+        									</h4>
+        									
+      									</div>
+      									<div id="collapse<%= message.id %>" class="panel-collapse collapse">
+        									<div class="panel-body">
+        										<%=  message.body %>
+        										<br /><br />
+        										<a href="#replyModal<%= message.id %>" class="messaging-body" data-toggle="modal">Reply</a>
+        									</div>
+      									</div>
+    								</div>
+									<% end %>
+  								</div> 
+							</div>
+						</div>
+    				</div>
+    				
+    				
+  				</div>
+			</div>
+				
+				
+			
+				
 			</div>
 		</div>
 	</div>
-	<br />
+	<div class="bottom-div">
+		<br />
+	</div>
 </div>
 
+<% @mail_box.each do |message| %>
+		<div class="container">
+  			
+  			<div class="modal fade rplymd" id="replyModal<%= message.id %>" role="dialog">
+    			<div class="modal-dialog">
+    
+      				<div class="modal-content">
+        				<div class="modal-header the-modal-header">
+          					<button type="button" class="close" data-dismiss="modal">&times;</button>
+          					<%= image_tag "app/logo1.png", class: "img-head" %>
+          					<br /><br /><br />
+
+          					<h3 class="modal-title"><%= message.body %> </h3>
+        				</div>
+        				<div class="modal-body md-body" align="center">
+        					
+        						<textarea id="body" row="10" col="10"></textarea>
+								<p class="sender-this" style="display: none;"><%= message.sender.profile.id %></p>
+        						<br /><br /><br />
+        				</div>
+        				<div class="modal-footer the-modal-footer">
+						<button id="message-supplier">Contact Supplier</button>
+						
+        					
+        					
+        				</div>
+      				</div>
+      
+    			</div>
+  			</div>
+  
+		</div>
+<% end %>
 
 
+		<div class="container">
+  			
+  			<div class="modal fade" id="welcome-screen" role="dialog">
+    			<div class="modal-dialog">
+    
+      				<div class="modal-content">
+        				<div class="modal-header the-modal-header">
+          					<button type="button" class="close" data-dismiss="modal">&times;</button>
+          					<%= image_tag "app/logo1.png", class: "img-head" %>
+          					<br /><br /><br />
+          					<h2>Welcome to your profile</h2>
+          					<span class="line1"></span>
+        				</div>
+        				<div class="modal-body md-body" align="center">
+        					<h3>Please take some time and edit your company details</h3>
+        					<br /><br /><br />
+        					<h4>Editing your profile details will enable you to be found by searchers looking for your service quickly and easily</h4>
+        					<br /><br /><br />
+        				</div>
+        				<div class="modal-footer the-modal-footer">
+        					<br />
+        					<button type="button" class="save-button" data-dismiss="modal">Continue</button>
+        				</div>
+      				</div>
+      
+    			</div>
+  			</div>
+  
+		</div>
+
+		<script type="text/javascript">
+            $(window).load(function(){
+                $('#welcome-screen').modal('show');
+            });
+        </script>
+
+
+<script>
+
+$(".full_name").click(function(e){
+    $('.full_name_text').attr("contentEditable", "true");
+    $('.full_name_text').css("outline","none");
+    console.log("it");
+});
+
+$(".tagline").click(function(e){
+    $('.tagline_text').attr("contentEditable", "true");
+    $('.tagline_text').css("outline","none");
+    console.log("it");
+});
+
+$(".short_desc").click(function(e){
+    $('.short_desc_text').attr("contentEditable", "true");
+    $('.short_desc_text').css("outline","none");
+	$('.short_desc_text').text("");
+    console.log("it");
+});
+
+$(".long_desc").click(function(e){
+    $('.long_desc_text').attr("contentEditable", "true");
+    console.log("it");
+});
+
+$(".address_text").click(function(e){
+    $('.address_text').attr("contentEditable", "true");
+    console.log("it");
+});
+
+$(".address_text_2").click(function(e){
+    $('.address_text_2').attr("contentEditable", "true");
+    console.log("it");
+});
+
+$(".phone_number_text").click(function(e){
+    $('.phone_number_text').attr("contentEditable", "true");
+    console.log("it");
+});
+
+$(".phone_number_text").click(function(e){
+    $('.phone_number_text_2').attr("contentEditable", "true");
+    console.log("it");
+});
+
+$(".email_text").click(function(e){
+    $('.email_text').attr("contentEditable", "true");
+    console.log("it");
+});
+
+$(".email_text_2").click(function(e){
+    $('.email_text_2').attr("contentEditable", "true");
+    console.log("it");
+});
+
+function previewFile() {
+  var preview = document.querySelector('.custom-profile-banner');
+  var file    = document.querySelector('input[type=file].upload-custom-banner').files[0];
+  var reader  = new FileReader();
+
+  reader.addEventListener("load", function () {
+    preview.src = reader.result;
+  }, false);
+
+  if (file) {
+    reader.readAsDataURL(file);
+  }
+  console.log(file)
+  //console.log(document.querySelector('input[type=file].upload-custom-banner').files[0].name)
+}
+
+
+
+
+$('#save-changes').click(function(e) {
+		e.preventDefault();
+		var profile;
+		var formData = new FormData();
+    	$input = $("input[type=file].upload-custom-banner");
+		formData.append('profile[banner]', $input[0].files[0]);
+		formData.append('profile[name_of_agency]', $('.full_name_text').text().trim());
+		formData.append('profile[desc]', $('.long_desc_text').text().trim());
+		formData.append('profile[short_desc]', $('.short_desc_text').text().trim());
+		formData.append('profile[tagline]', $('.tagline_text').text().trim());
+		formData.append('address[physical_address]', $('.address_text').text().trim());
+		$('#slider').attr("value", function( i, val ){
+			profile = val;
+		});
+
+		$.ajax({
+		  url: "/profiles/"+profile,
+		 type: "PATCH",
+		 data: formData,
+		cache: false,
+  contentType: false,
+  processData: false,
+	  success: function(resp){ 
+			console.log(resp);
+			},
+		 fail:  function(resp){
+			console.log(resp);
+	   }
+		});
+
+
+});
+
+	$('.message-mail').click(function(e){
+		var messageId = $(this).attr('title');
+		var messageForm = new FormData();
+		messageForm.append('message[read]', 1);
+
+		$.ajax({
+		  url: "/messages/"+messageId,
+		 type: "PATCH",
+		 data: messageForm,
+		cache: false,
+  contentType: false,
+  processData: false,
+	  success: function(resp){ 
+			console.log(resp);
+			},
+		 fail:  function(resp){
+			console.log(resp);
+	   		}
+		});
+
+	});
+
+
+
+
+
+
+
+
+
+
+
+	$('#message-supplier').click(function(e){
+	e.preventDefault();
+	var messageId = $(this).attr('title');
+	var messageForm = new FormData();
+	messageForm.append('message[body]', $('#body').val().trim());
+	messageForm.append('message[profile_id]',$('.sender-this').html().trim());
+
+$.ajax({
+		url: "/messages/",
+		type: "POST",
+		data: messageForm,
+	   cache: false,
+ contentType: false,
+ processData: false,
+	 success: function(resp){ 
+		console.log(resp);
+		$('.alert').html("");
+		$('.modal-body').prepend("<div class='alert alert-success' role='alert'> Message sent sucessfully!</div>");
+		},
+		fail:  function(resp){
+		$('.alert').html("");
+		$('.modal-body').prepend("<div class='alert alert-danger' role='alert'> You cannot send this message at this time!</div>");
+		}
+	});
+});
+
+
+
+
+
+
+
+
+
+
+
+
+
+</script>
